--- a/pages/enrollee.css
+++ b/pages/enrollee.css
@@ -14,7 +14,6 @@
   right: 30px;
   z-index: 99;
   font-size: 18px;
-  border: none;
   outline: none;
   background-color: red;
   color: white;
@@ -22,7 +21,6 @@
   padding: 15px;
   border-radius: 4px;
 }
-
 .dropbtn {
   background-color: rgb(149, 156, 199);
   color: rgb(10, 4, 4);
@@ -38,9 +36,28 @@
   display: inline-block;
 }
 
+.toc .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fffafa;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: rgb(250, 248, 248);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  margin-top: 5px;
+}
+
+.dropdown-content a:hover {background-color: rgb(252, 246, 246);}
+
+.dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #b18faf;}
-
 #myBtn:hover {
   background-color: #555;
 }
@@ -172,31 +189,29 @@ img.product_overlay.img-fluid {
   padding: 0;
   padding: 0 20px;
   display: inline-block;
+  max-width: 1170px;
   margin: 0 auto;
   display: flex;
   list-style: none;
   margin-bottom: 80px;
  }
  .toc a {
-  color: rgb(4, 5, 12); /* Цвет текста */
-  background: rgb(149, 156, 199); /* Цвет фона */
+  color: rgb(149, 156, 199); /* Цвет текста */
+  background: rgb(255, 255, 255); /* Цвет фона */
   padding: 2px; /* Поля вокруг текста */
   transition: 0.3s linear; /* Время изменения */
   text-decoration: none;
   font-size: 18px;
   text-align: center;
-  border-radius: 45px;
  }
  .toc a:hover {
-  color: rgb(4, 5, 12); /* Цвет текста */
-  background: #b18faf; /* Цвет фона */
+  color: rgb(255, 255, 255); /* Цвет текста */
+  background: rgb(149, 156, 199); /* Цвет фона */
   text-decoration: none;
   font-size: 18px;
-  text-align: center; 
-  box-shadow: 0px 0px 0px 5px #b18faf;
+  text-align: center;
   
  }
-
  ul{
   display: flex;
   list-style: none;
