--- a/pages/adstyle.css
+++ b/pages/adstyle.css
@@ -22,7 +22,13 @@
   padding: 15px;
   border-radius: 4px;
 }
-
+.skiptranslate {
+  display: none;
+  height: 0;
+}
+.language__img {
+  cursor: pointer;
+}
 .dropbtn {
   background-color: rgb(149, 156, 199);
   color: rgb(10, 4, 4);
@@ -93,6 +99,7 @@ nav a:hover {
 header > .container {
   height: 100px;
   display: flex;
+  font-size: 14.5px;
 }
 .banner {
   overflow-x: hidden;
@@ -147,7 +154,6 @@ h3 {
   margin-left: 20px;
   margin-right: 50px;
 }
-
 .toc {
   margin: 0;
   padding: 0;
@@ -204,7 +210,7 @@ div.scrollup {
 div.scrollup:hover {
   background-color: #000; /* цвет заднего фона при наведении */
 }
-img{
+th img{
   width: 100%;
 }
 table {
@@ -223,6 +229,13 @@ td {
   border: 1px solid black; /* Граница вокруг ячеек */
   text-align: center;
   font-family: "Noto Sans", sans-serif;
+}
+.skiptranslate {
+  display: none;
+  height: 0;
+}
+.language__img {
+  cursor: pointer;
 }
 footer {
   background-color: rgb(149, 156, 199);
